force-app/main/default/objects/ILVPos__c/ILVPos__c.object-meta.xml
<CustomObject>
    <label>ILV Pos</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>ILV Pos Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILV Pos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>