force-app/main/default/objects/ILVPos__c/fields/CostCenterILVGiver__c.field-meta.xml
<CustomField>
    <fullName>CostCenterILVGiver__c</fullName>
    <formula>PackageName__r.ProjectName__r.ProjectCostCenter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center (ILV Giver)</label>
    <type>Text</type>
</CustomField>