force-app/main/default/objects/ILVPos__c/fields/CostCenterILVReceiver__c.field-meta.xml
<CustomField>
    <fullName>CostCenterILVReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center (ILV Receiver)</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>ILV Pos</relationshipLabel>
    <relationshipName>ILVPos</relationshipName>
    <type>Lookup</type>
</CustomField>