force-app/main/default/objects/ILVPos__c/fields/CostCenterNrILVGiver__c.field-meta.xml
<CustomField>
    <fullName>CostCenterNrILVGiver__c</fullName>
    <formula>PackageName__r.ProjectName__r.ProjectCostCenter__r.CostCenterNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center Nr. (ILV Giver)</label>
    <type>Text</type>
</CustomField>