force-app/main/default/objects/ILVPos__c/fields/CostCenterNrILVReceiver__c.field-meta.xml
<CustomField>
    <fullName>CostCenterNrILVReceiver__c</fullName>
    <label>Cost Center Nr. (ILV Receiver)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>