force-app/main/default/objects/ILVPos__c/fields/FinanceAccountILVGiver__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccountILVGiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Account (ILV Giver)</label>
    <referenceTo>FinanceAccount__c</referenceTo>
    <relationshipLabel>ILV Pos (Finance Account (ILV Giver))</relationshipLabel>
    <relationshipName>ILV_Pos</relationshipName>
    <type>Lookup</type>
</CustomField>