force-app/main/default/objects/ILVPos__c/fields/FinanceAccountILVReceiver__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccountILVReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Account (ILV Receiver)</label>
    <referenceTo>FinanceAccount__c</referenceTo>
    <relationshipLabel>ILV Pos</relationshipLabel>
    <relationshipName>ILVPos</relationshipName>
    <type>Lookup</type>
</CustomField>