force-app/main/default/objects/ILVPos__c/fields/FinanceAccountNrILVGiver__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccountNrILVGiver__c</fullName>
    <label>Finance Account Nr. (ILV Giver)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>