force-app/main/default/objects/ILVPos__c/fields/FinanceAccountNrILVReceiver__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccountNrILVReceiver__c</fullName>
    <label>Finance Account Nr. (ILV Receiver)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>