force-app/main/default/objects/ILVPos__c/fields/ILVPositionAmount__c.field-meta.xml
<CustomField>
    <fullName>ILVPositionAmount__c</fullName>
    <label>ILV Position - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>