force-app/main/default/objects/ILVPos__c/fields/ILVPositionAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>ILVPositionAmountCHF__c</fullName>
    <formula>CurrencyRateToCHF__c *ILVPositionAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILV Position - Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>