force-app/main/default/objects/ILVPos__c/fields/ILVPositionDate__c.field-meta.xml
<CustomField>
    <fullName>ILVPositionDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>ILV Position Date</label>
    <type>Date</type>
</CustomField>