force-app/main/default/objects/ILVPos__c/fields/ILVPositionDescription__c.field-meta.xml
<CustomField>
    <fullName>ILVPositionDescription__c</fullName>
    <label>ILV Position Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>