force-app/main/default/objects/ILVPos__c/fields/ILVType__c.field-meta.xml
<CustomField>
    <fullName>ILVType__c</fullName>
    <label>ILV Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>