force-app/main/default/objects/ILVPos__c/fields/InvoiceName__c.field-meta.xml
<CustomField>
    <fullName>InvoiceName__c</fullName>
    <label>Invoice Name</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>ILV Pos</relationshipLabel>
    <relationshipName>ILVPos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>