force-app/main/default/objects/ILVPos__c/fields/LegalCodeILVGiver__c.field-meta.xml
<CustomField>
    <fullName>LegalCodeILVGiver__c</fullName>
    <formula>FinanceAccountILVGiver__r.CostCenter__r.LegalAccount__r.LegalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Code (ILV Giver)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>