force-app/main/default/objects/ILVPos__c/fields/LegalCodeILVReceiver__c.field-meta.xml
<CustomField>
    <fullName>LegalCodeILVReceiver__c</fullName>
    <formula>FinanceAccountILVReceiver__r.CostCenter__r.LegalAccount__r.LegalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Code (ILV Receiver)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>