force-app/main/default/objects/ILVPos__c/fields/RelevantToRevenue__c.field-meta.xml
<CustomField>
    <fullName>RelevantToRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relevant to Revenue</label>
    <type>Checkbox</type>
</CustomField>