force-app/main/default/objects/ILVPos__c/fields/ValCheckValidILVPos__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidILVPos__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidILVPos</label>
    <type>Checkbox</type>
</CustomField>