force-app/main/default/objects/ILVPos__c/fields/ValNoDelete__c.field-meta.xml
<CustomField>
    <fullName>ValNoDelete__c</fullName>
    <formula>AND(
 ValNoDeleteOverrideSysAdmin__c =false,
IF(ISPICKVAL(InvoiceName__r.InvoiceStatus__c ,&quot;Draft&quot;),False,True))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValNoDelete</label>
    <type>Checkbox</type>
</CustomField>