force-app/main/default/objects/ILVPos__c/validationRules/ILV002_ILV_POS_not_move.validationRule-meta.xml
<ValidationRule>
    <fullName>ILV002_ILV_POS_not_move</fullName>
    <active>true</active>
    <description>The ILV Postiion can not be attached to another invoice.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

ISCHANGED( InvoiceName__c ))</errorConditionFormula>
    <errorMessage>You can not attach an ILV position to another invoice. Please get in touch with your Super User for assistance.
(ILV002)</errorMessage>
</ValidationRule>